kustomize-crd-delete-namespace/base/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: dc-test
  namespace: myNamespace
spec:
  replicas: 1
  selector:
    deployment-config.name: dc-test
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        deployment-config.name: dc-test
    spec:
      containers:
      - image: busybox
        name: default-container
        command: ["sleep"]
        args:
          - "infinity"
        resources: {}
  test: false
  triggers:
    - type: ConfigChange
